--- a/style.css
+++ b/style.css
@@ -166,3 +166,22 @@ div.desc {
   display: inline-block;
   cursor: pointer;
 }
+
+
+/* icon-hover effects */
+.icon-hvr{
+  border-radius: 50%;
+  
+}
+.icon-hvr:hover::before{
+  transform: scale(1.1);
+  box-shadow: 0 0 15px #f16e03;
+}
+
+.icon-hvr:hover{
+  color: #03f1e1;
+  /* box-shadow: 0 0 5px #03f1e1; */
+  text-shadow: 0 0 5px #f69401;
+  filter: drop-shadow(0 0 10px #03f1e1);
+}
+
