--- a/style.css
+++ b/style.css
@@ -185,3 +185,15 @@ div.desc {
   filter: drop-shadow(0 0 10px #03f1e1);
 }
 
+/* slide-hover effects */
+.slide-hvr:hover::before{
+  transform: scale(1.1);
+  box-shadow: 0 0 15px #f16e03;
+}
+
+.slide-hvr:hover{
+  color: #03f1e1;
+  /* box-shadow: 0 0 5px #03f1e1; */
+  text-shadow: 0 0 5px #f69401;
+  filter: drop-shadow(0 0 10px #03f1e1);
+}
